<resources>
    <string name="app_name">Jupiter Jam</string>
    <string name="play_button">Play</string>
    <string name="profile_button">Profile</string>
    <string name="credit_button">Credits</string>
    <string name="tutorial">Tutorial</string>
    <string name="beginner">Beginner</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="name_hint">Player Name</string>
    <string name="theme_button">Theme</string>
    <string name="player_wins">Wins: </string>
    <string name="player_loses">Loses: </string>
    <string name="back_button">BACK</string>
    <string name="moon">Moon</string>
    <string name="saturn">Saturn</string>
    <string name="neptune">Neptune</string>
    <string name="mars">Mars</string>
    <string name="earth">Earth</string>
    <string name="jupiter">Jupiter</string>
    <string name="return_to_mm"> Return to Main Menu</string>
    <string name="you_won">You Won!</string>
    <string name="game_over">Game Over</string>
    <string name="pause_Menu">Pause Menu</string>
    <string name="resume">Resume</string>
    <string name="main_menu">Main menu</string>
</resources>