<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playmenu_bg">


    <!-- Layout buttons -->
    <Button
        android:id="@+id/tutorialButton"
        android:layout_width="206dp"
        android:layout_height="60dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="449dp"
        android:text="@string/tutorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/beginnerButton"
        android:layout_width="206dp"
        android:layout_height="60dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="369dp"
        android:text="@string/beginner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="206dp"
        android:layout_height="60dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="293dp"
        android:text="@string/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="206dp"
        android:layout_height="60dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="629dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="220dp"
        android:text="@string/hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>