<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_bg"
    tools:context=".ProfileMenu">

    <!-- (Displays current theme image)  -->
    <ImageView
        android:id="@+id/ship"
        android:layout_width="199dp"
        android:layout_height="356dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:srcCompat="@drawable/jupiter_ship" />

    <!-- Text View (Displays current theme name) -->
    <TextView
        android:id="@+id/currentTheme"
        android:layout_width="379dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:text= ""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <!-- Layout buttons (Theme selectors) -->

    <Button
        android:id="@+id/themeButton1"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:backgroundTint="#E23624"
        android:onClick="changeTheme"
        android:text="@string/jupiter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/themeButton2"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:backgroundTint="#2ABD2F"
        android:onClick="changeTheme"
        android:text="@string/earth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/themeButton3"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:backgroundTint="#DB1616"
        android:onClick="changeTheme"
        android:text="@string/mars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/themeButton4"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:backgroundTint="#1222DE"
        android:onClick="changeTheme"
        android:text="@string/neptune"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <Button
        android:id="@+id/themeButton5"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E4D97A"
        android:onClick="changeTheme"
        android:text="@string/saturn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <Button
        android:id="@+id/themeButton6"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:backgroundTint="#736C6C"
        android:onClick="changeTheme"
        android:text="@string/moon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <!-- Back button -->

    <ImageButton
        android:id="@+id/revertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="backToProfile"
        android:contentDescription="@string/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />


</androidx.constraintlayout.widget.ConstraintLayout>