<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gameplaybg"
    tools:context=".GamePlay">

    <ImageView
        android:id="@+id/rocket"
        android:layout_width="146dp"
        android:layout_height="140dp"
        android:layout_marginTop="608dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jupiter_ship" />


    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play" />

    <ImageView
        android:id="@+id/pauseMenu"
        android:layout_width="298dp"
        android:layout_height="350dp"
        android:layout_marginTop="224dp"
        android:background="#70FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/pause_Menu"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/pauseMenu"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/pauseMenu"
        app:layout_constraintTop_toTopOf="@+id/pauseMenu" />

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:layout_marginTop="404dp"
        android:backgroundTint="#C53333"
        android:text="@string/resume"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/pauseMenu"
        app:layout_constraintStart_toStartOf="@+id/pauseMenu"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:layout_marginTop="480dp"
        android:backgroundTint="#C53333"
        android:text="@string/main_menu"
        android:visibility="gone"
        android:contentDescription="@string/back_button"
        android:onClick="revertToMainMenu"
        app:layout_constraintEnd_toEndOf="@+id/pauseMenu"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/pauseMenu"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>